--- a/the-ripoff-in-question/style/style.css
+++ b/the-ripoff-in-question/style/style.css
@@ -1,10 +1,10 @@
 body {
-  background: linear-gradient(
+  /* background: linear-gradient(
     to bottom,
     red,
     green,
     blue
-  ); /* this will definetly be changes lol*/
+  ); this will definetly be changes lol */
   width: 100vw;
   height: 100vh;
   overflow: hidden;
@@ -16,4 +16,8 @@ canvas {
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+#hitboxCanvas {
+  background: red;
 }
