This is version 1.0

--- a/the-ripoff-in-question/style/style.css
+++ b/the-ripoff-in-question/style/style.css
@@ -1,10 +1,10 @@
 body {
-  background: linear-gradient(
-    to bottom,
-    red,
-    green,
-    blue
-  ); /*this will definetly be changes lol*/
+  background: url("../media/images/background.jpg") no-repeat center center
+    fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   width: 100vw;
   height: 100vh;
   overflow: hidden;
